--- a/client/index.html
+++ b/client/index.html
@@ -28,8 +28,7 @@
      <h1> Zach's Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="../assets/ZTE.png"
-          /></div>
+            ><img src="../images/logo.png"/></div>
     </nav>
 
     <main id="main">
