--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../client/src/css/style.css"/>
     <title>Zach's Text Editor</title>
-    <link rel="icon" href="../assets/favicon.ico">
+    <link rel="icon" href="../client/src/images/favicon.ico">
     
       <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.52.2/codemirror.min.css">
@@ -28,7 +28,7 @@
      <h1> Zach's Text Editor</h1>
      
       <div class="navbar-brand" 
-            ><img src="../images/logo.png"/></div>
+            ><img src="../client/src/images/ZTE.png"/></div>
     </nav>
 
     <main id="main">
